restored actual stage code that won't pass previous tests